2438 [x264] custom --fps values will be detected and used
2437 [OneClick] improved working directory generation
                improved handling if selected output container cannot be used
2436 [M2TS Muxer] added HEVC/x265 and MKV support (requires tsmuxer 2.5.5+)
     [OneClick] added HEVC/x265 support for MP4 and removed it for MKV
2435 [Update] optional packages will only be downloaded/enabled if needed (part II)
              now all external programs are disabled by default
2434 [Update] an update to 2431+ will not disable DGIndexNV, NeroAACenc, QAAC or x265 if already enabled
2433 [AVS Script Creator] fixed "TDeint (with EDI)" (regression of 2305)
2432 [Update] fixed DGIndexNV, NeroAACenc, QAAC and x265 update handling (regression of 2431)
2431 [Update] optional packages will only be downloaded/enabled if needed
              therefore during first use of such packages an online connection may be required
              if a package is not used in 60 days it will be disabled again
              currently the following packages are disabled by default (more to come):
              DGIndexNV, FFmpeg, MKVMerge, NeroAACenc, QAAC, x264, x264_10b, x265
              DGIndexNV, NeroAACenc, QAAC and x265 still need to be enabled in the MeGUI settings
              NeroAACenc, QAAC and x265 need a restart of MeGUI so that the presets are enabled
2430 [OneClick] fixed unnecessary resize/crop in some cases (regression of 2357)
2429 [Update] version/date information will be shown also for disabled packages
2428 [Update] disabled packages are not hidden anymore
2427 [Update] hide x264 10bit completly if disabled (regression of 2395)
2426 [x265] added option to enable/disable x265 in the MeGUI settings (disabled by default)
2425 [Queue] fixed crash if more than one worker is opening an avs script
2424 [x265] fixed default encoding mode part II
2423 [x265] fixed default encoding mode
2422 [x265] added basic x265 encoding support