@@ -983,7 +983,7 @@ namespace MeGUI
             {
                 if (detector == null) // We want to start the analysis
                 {
-                    string source = ScriptServer.GetInputLine(input.Filename, indexFile, false, sourceType, false, false, false, 25, false);
+                    string source = ScriptServer.GetInputLine(input.Filename, indexFile, false, sourceType, false, false, false, 0, false);
                     if (nvDeInt.Enabled) 
                         source += ")";
                     detector = new SourceDetector(source,
