@@ -100,9 +100,7 @@ namespace MeGUI
                 for (int iCurrentTrack = 0; iCurrentTrack <= 29; iCurrentTrack++) // hard limit to max. 30 tracks
                 {
                     StringBuilder strAVSScript = new StringBuilder();
-                    String strDLLPath = Path.Combine(Path.GetDirectoryName(MainForm.Instance.Settings.FFMS.Path), "ffms2.dll");
-                    strAVSScript.AppendLine("LoadPlugin(\"" + strDLLPath + "\")");
-                    strAVSScript.AppendLine("FFAudioSource(\"" + job.Input + "\", track=" + iCurrentTrack + (!string.IsNullOrEmpty(job.Output) ? ", cachefile=\"" + job.Output + "\"" : String.Empty) + ")");
+                    strAVSScript.Append(VideoUtil.getFFMSAudioInputLine(job.Input, job.Output, iCurrentTrack));
 
                     // is this an audio track?
                     string strErrorText;
